--- a/JS/02/1.html
+++ b/JS/02/1.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Homework</title>
 </head>
+
 <body>
-<!--
+  <!--
 Обязательное задание.
 
 Для кода вставленного в теге script необходимо дать комментарии, почему мы
@@ -14,37 +16,52 @@
 Подсказка. Чтобы лучше разобраться возьмите этот код и запустите в отладчике в
 браузере со включенными точками остановки.
 -->
-<script>
-  "use strict";
+  <script>
+    "use strict";
 
-  let a = 1, b = 1, c, d;
+    let a = 1, b = 1, c, d;
 
-  /*
-  Ваш комментарий, почему переменная `c` хранит данное значение?
-   */
-  c = ++a;
-  console.log(c);
+    /*
+    Переменная `c` хранит данное значение 2 потому, что:
+    а присвоили 1
+    а увеличели на 1 = 2
+    с присвоили 2
+     */
+    c = ++a;
+    console.log(c);
 
-  /*
-  Ваш комментарий, почему переменная `d` хранит данное значение?
-   */
-  d = b++;
-  console.log(d);
+    /*
+    Переменная `d` хранит данное значение потому, что:
+    b = 1
+    d присволили значение b = 1
+    после b прибавили 1
+     */
+    d = b++;
+    console.log(d);
 
-  /*
-  Ваш комментарий, почему переменная `c` хранит данное значение?
-   */
-  c = 2 + ++a;
-  console.log(c);
+    /*
+    Переменная `c` хранит данное значение потому, что:
+    а = 2
+    а увеличели на 1 = 3
+    2 + 3 = 5
+    с присвоили 5
+     */
+    c = 2 + ++a;
+    console.log(c);
 
-  /*
-  Ваш комментарий, почему переменная `d` хранит данное значение?
-   */
-  d = 2 + b++;
-  console.log(d);
+    /*
+    Переменная `d` хранит данное значение потому, что:
+    b = 2
+    2 + 2 = 4
+    d присвоили 4
+    после b прибавили 1
+     */
+    d = 2 + b++;
+    console.log(d);
 
-  console.log(a);
-  console.log(b);
-</script>
+    console.log(a);
+    console.log(b);
+  </script>
 </body>
+
 </html>
