--- a/JS/02/решения/2.html
+++ b/JS/02/решения/2.html
@@ -21,10 +21,16 @@
   let x = 1 + (a *= 2);
 
   /*
-  Переменные `x` и `a` хранят данные значения потому, что:
-  а = 2
-  сначала в скобках = 2 * 2 = 4 и присваиваем а = 4
-  4 + 1 = 5 и присваиваем х = 5
+  Последовательность действий:
+  1. Сначала выполнится (a *= 2), это тоже самое что и (a = a * 2), на момент
+    выполнения в переменной a лежит 2, получается a = 2 * 2 получим 4, эта
+    четверка присвоится в переменную `a`.
+  2. На месте присваивания остается то значение, которое мы присваиваем, это
+    означает что мы получим  let x = 1 + 4;
+  3. 1 + 4 получается 5. Эта пятерка присвоится в переменную x.
+  4. Итог:
+    a === 4
+    x === 5
    */
   console.log(x);
   console.log(a);
