--- a/JS/02/решения/3.html
+++ b/JS/02/решения/3.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <title>Homework</title>
 </head>
-
 <body>
-  <!--
+<!--
 Обязательное задание.
 
 Необходимо попросить пользователя ввести два числа в переменные `a` и `b`.
@@ -20,24 +18,20 @@
 `a` и `b`.
 В остальных случаях программа не должна ничего выводить.
 -->
-  <script>
-    "use strict";
+<script>
+  "use strict";
 
-    const a = +prompt('Введите число а')
-    const b = +prompt('Введите число b')
+  const a = +prompt('Введите первое число');
+  const b = +prompt('Введите второе число');
 
-    console.log(result(a, b))
+  if (a > 0 && b > 0) {
+    console.log(a - b);
+  } else if (a < 0 && b < 0) {
+    console.log(a * b);
+  } else if (a * b < 0) {
+    console.log(a + b);
+  }
 
-    function result(a, b) {
-      if (a > 0 && b > 0) {
-        return a - b
-      } else if (a < 0 && b < 0) {
-        return a * b
-      } else {
-        return a + b
-      }
-    }
-  </script>
+</script>
 </body>
-
-</html> 
+</html>
